--- a/components/listingCard/template.html
+++ b/components/listingCard/template.html
@@ -22,7 +22,7 @@
           <div class="flex flex-col p-3 gap-2">
             <div class="">
                 <h2 class="line-clamp-1 text-2xl font-bold  md:text-lg leading-snug">{{ title }}</h2>
-                <p class="text-sm font-bold text-gray-800">
+                <p class="text-sm text-gray-600">
                     {{ address }}
                 </p>
               </div>
