--- a/components/misc/stats-partner.html
+++ b/components/misc/stats-partner.html
@@ -3,12 +3,12 @@
 <section class="responsive-padding flex flex-col lg:flex-row responsive-padding gap-12 md:justify-between">
     <dl class="stats flex justify-start gap-10 items-center font-medium">
         <div class="flex flex-col gap-4 items-center">
-            <dt class="text-6xl">200+</dt>
+            <dt class="text-6xl font-black">200+</dt>
             <dd class="text-gray-700">Satisfied customers</dd>
         </div>
 
         <div class="flex flex-col gap-4 items-center">
-            <dt class="text-6xl">10+</dt>   
+            <dt class="text-6xl font-black">10+</dt>   
             <dd class="text-gray-700">Years served</dd>
         </div>
     </dl>
