--- a/core/templates/core/real_estate.html
+++ b/core/templates/core/real_estate.html
@@ -98,18 +98,18 @@
         <div class="flex flex-col md:flex-row md:flex-wrap justify-center items-center gap-6 *:w-64 *:h-64 *:flex *:flex-col *:gap-2 *:items-center *:justify-center *:px-2 *:rounded-xl *:shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)]">
             <div>
                 <img src="{% static 'images/noto_brain.svg' %}" class="w-16 h-16">
-                <div class="text-xl font-bold">Local Market Experts</div>
-                <p class="text-center font-medium">With deep knowledge of the Nigerian real estate market, we help you make informed decisions, whether buying, selling, or renting.</p>
+                <div class="text-xl font-bold text-center">Local Market Experts</div>
+                <p class="text-center">With deep knowledge of the Nigerian real estate market, we help you make informed decisions, whether buying, selling, or renting.</p>
             </div>
             <div>
                 <img src="{% static 'images/mingcute_target-fill.svg' %}" class="w-16 h-16">
-                <div class="text-xl font-bold">Service Tailored Just for You</div>
-                <p class="text-center font-medium">Your needs come first! We provide personalized solutions to match your property goals.</p>
+                <div class="text-xl font-bold text-center">Service Tailored Just for You</div>
+                <p class="text-center">Your needs come first! We provide personalized solutions to match your property goals.</p>
             </div>
             <div>
                 <img src="{% static 'images/emojione_handshake-medium-dark-skin-tone.svg' %}" class="w-16 h-16">
-                <div class="text-xl font-bold">Trusted Network of Professionals</div>
-                <p class="text-center font-medium">Gain access to reliable contractors, legal advisors, and property managers to ensure a smooth experience.</p>
+                <div class="text-xl font-bold text-center">Trusted Network of Professionals</div>
+                <p class="text-center">Gain access to reliable contractors, legal advisors, and property managers to ensure a smooth experience.</p>
             </div>
         </div>
     </section>
