--- a/adminv2/templates/adminv2/listing/add.html
+++ b/adminv2/templates/adminv2/listing/add.html
@@ -54,8 +54,8 @@
             </div>
         
             <div>
-                <label for="id_units" class="label-primary">Units</label>
-                <input class="input-primary" type="number" name="units" id="id_units">
+                <label for="id_size" class="label-primary">Size</label>
+                <input class="input-primary" type="number" name="size" id="id_size">
             </div>
         
             <div>
@@ -119,7 +119,7 @@
 
 {% block script %}
     <script>
-
+        /* FOR LOCAL GOVERNMENT AREA FETCHING */
         const stateField = document.querySelector('#id_state');
         const lgaField = document.querySelector('#id_lga');
 
@@ -137,8 +137,11 @@
            await updateLGAOptions(stateField.value)
         }) 
 
+         /* END FOR LOCAL GOVERNMENT AREA FETCHING */
        
 
+
+         /* HANDLING FILE UPLOADS + ALPINE.JS */
         let uploadFiles = []
 
         function handleFileUpload(event, component){
@@ -162,7 +165,10 @@
             }
             console.log(uploadFiles)
         }
+        /*END HANDLING FILE UPLOADS + ALPINE.JS */
 
+
+        /* PREPARING FORMDATA AND SUBMITING */
         function prepareFormData(form){
             formData = new FormData(form)
 
@@ -190,5 +196,10 @@
             .then(data => console.log(data))
             .catch(error => console.log('Upload failed', error));
         }
+        /* END PREPARING FORMDATA AND SUBMITING */
+
+
+
+        
     </script>
 {% endblock %}
