--- a/listing/templates/listing/details.html
+++ b/listing/templates/listing/details.html
@@ -1,10 +1,11 @@
 {% extends 'core/base.html'%}
 {% load static %}
+{% load humanize %}
 
 {% block title %} {{listing.title}} {% endblock %}
 
 {% block content %}
-    <main class="responsive-padding grid grid-cols-1 md:grid-cols-3 gap-8 xl:gap-16 mt-9">
+    <main class="responsive-padding grid grid-cols-1 lg:grid-cols-3 gap-8 xl:gap-16 mt-9">
         <section class="col-span-2 flex flex-col gap-8">
             <div x-data="{            
                 slides: [                
@@ -39,7 +40,7 @@
                     }            
                 },        
             }" class="relative w-full">
-            
+                <span class="absolute top-0 left-2 z-20 mt-3 ml-3 select-none text-sm font-bold px-3 py-1 bg-slate-200 rounded inline-flex justify-center items-center gap-2 overflow-hidden text-blue-700 uppercase"> {{ listing.listing_type }} </span>
                 <!-- previous button -->
                 <button type="button" class="absolute left-5 top-1/3 z-20 flex rounded-full -translate-y-1/2 items-center justify-center bg-surface/40 p-2 text-on-surface transition hover:bg-surface/60 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary active:outline-offset-0 dark:bg-surface-dark/40 dark:text-on-surface-dark dark:hover:bg-surface-dark/60 dark:focus-visible:outline-primary-dark" aria-label="previous slide" x-on:click="previous()">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="white" fill="none" stroke-width="3" class="size-5 md:size-6 pr-0.5" aria-hidden="true">
@@ -72,7 +73,7 @@
                 </div>
 
                 <!-- Thumbnail -->
-                 <div class="flex self-start justify-center gap-2 mt-4">
+                 <div class="flex self-start gap-2 mt-4">
                     <template x-for="(slide, index) in slides">
                         <img x-bind:src="slide.imgSrc" 
                                 x-bind:alt="slide.imgAlt"
@@ -93,16 +94,16 @@
                     <div class="text-blue-700 bg-gray-200 w-max px-1 py-0.5 rounded inline-block font-semibold leading-tight"><span>{{ listing.size }}</span> Sq.m</div>
                 </div>
                         
-                <div class="text-blue-700 text-[32px] inline-block font-semibold leading-tight w-max">&#8358; <span class="text-2xl"> {{listing.price}} </span> </div>
+                <div class="text-[32px] inline-block font-semibold leading-tight w-max"> &#8358;{{ listing.price|intcomma }}</div>
             </div>
             
             <div class="border-t border-gray-400">
-                <h3 class="text-xl font-bold">Description</h3>
+                <h3 class="text-xl font-bold mb-2">Description</h3>
                 <p>{{ listing.description }}</p>
             </div>
 
             <div class="border-t border-gray-400">
-                <h3 class="text-xl font-bold">Features</h3>
+                <h3 class="text-xl font-bold mb-2">Features</h3>
                 <ul class="w-full grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 items-center">
                 {% for feature in features %}
                     <li class="flex justify-start gap-0.5">
@@ -118,9 +119,9 @@
             
         </section>
         
-
-        <section class="bg-white w-full md:col-span-1 md:sticky md:top-12 lg:bottom-0 pt-8 self-start fixed bottom-0 left-0">
-            <div class="flex flex-col gap-6 overflow-hidden p-3 lg:p-4 rounded-xl shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] outline-1 outline-offset-[-1px] outline-[#314158]">
+        {% comment %}  lg:sticky lg:top-1 lg:bottom-0 pt-8 self-start fixed bottom-0 left-0 {% endcomment %}
+        <section class="bg-white w-full lg:col-span-1 lg:sticky lg:top-4 lg:bottom-0 pt-8 self-start fixed bottom-0 left-0">
+            <div class="flex flex-col gap-6 overflow-hidden lg:mt-10 p-3 lg:p-4 rounded-xl shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] outline-1 outline-offset-[-1px] outline-[#314158]">
                 <div class="flex justify-between">
                     <h2 class="w-2/3 text-lg line-clamp-2 font-bold">{{ listing.title }}</h2>
 
@@ -143,9 +144,9 @@
 
                     </div>
                 </div>
-                <div class="flex lg:flex-col flex-row flex-wrap justify-center items-center gap-4">
-                    {% component "button" label="Enquire Now" type="primary" width="max" %} {% endcomponent %}
-                    {% component "button" label="<i class='fa fa-whatsapp text-white'></i> WhatsApp" type="primary" extraclass="bg-green-600" width="max" %} {% endcomponent %}
+                <div class="flex flex-row lg:flex-col justify-center items-center gap-4">
+                    {% component "button" label="Enquire Now" type="primary" width="full" %} {% endcomponent %}
+                    {% component "button" label="<i class='fa fa-whatsapp text-white'></i> WhatsApp" type="primary" extraclass="bg-green-600" width="full" %} {% endcomponent %}
                 </div>
             </div>
 
