--- a/core/templates/core/real_estate.html
+++ b/core/templates/core/real_estate.html
@@ -26,8 +26,19 @@
 
             <div class="grid w-full grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
                 {% for result in listings %}
-                    {% component "listing_card" title="{{result.title}}" href="{% url 'listing:property_details' result.id %}" price="{{result.price}}" size="{{result.size}}" type="{{result.listing_type}}" imageUrl="/media/{{result.cover_image}}" address="{{result.street_address}}, {{result.lga}}, {{result.state}}" %} {% endcomponent %}
-                    
+                    {% component "listing_card" 
+                        title=result.title 
+                        href=href_url|default:"/listing/{{ result.id }}/" 
+                        price=result.price 
+                        size=result.size 
+                        type=result.listing_type 
+                        imageUrl=result.cover_image.url 
+                        address=result.street_address|stringformat:", %s"|add:result.lga|stringformat:", %s"|add:result.state 
+                        listing=result 
+                        id=result.pk 
+                        user_favourites=user_favourites 
+                    %}
+                    {% endcomponent %}
                 {% endfor %}
                 
                 {% comment %} {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
