use backblaze api to handle deletion

--- a/adminv2/templates/adminv2/listing/listing.html
+++ b/adminv2/templates/adminv2/listing/listing.html
@@ -81,6 +81,10 @@
                                 List
                             {% endif %}
                         </button>
+                        <form action="{% url 'adminv2:delete-listing' listing_id=result.id %}" method="POST">
+                            {% csrf_token %}
+                            <button type="submit">Delete</button>
+                        </form>
                     </td>
                 </tr>
                 {% endfor %}
